crates/contextdb-core/tests/fixtures/compile_fail/rowid_into_txid.rs
use contextdb_core::{RowId, TxId};

fn main() {
    let rid = RowId(1);
    let _tx: TxId = rid;
}
