crates/contextdb-core/tests/fixtures/compile_fail/rowid_into_txid.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/rowid_into_txid.rs:5:21
  |
5 |     let _tx: TxId = rid;
  |              ----   ^^^ expected `TxId`, found `RowId`
  |              |
  |              expected due to this
